possibly fixed columns on small devices, need to double check

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -228,7 +228,7 @@ nav li {
   align-self: center;
   position: absolute;
   top: 14px;
-  right: 15px;
+  right: 30px;
   z-index: 99999;
   label {
     position: relative;
@@ -317,6 +317,9 @@ footer {
 @media only screen and (max-width: 767.98px) {
   .top {
     height: auto;
+  }
+  .projectSection {
+    text-align: center;
   }
   .bottomContactSection {
     text-align: center;
